# digital-twin-distiller

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG  Dockerfile  README.md  dockerize.sh  lgtm.yml  magnetic_ref.lua  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  start.sh  testscriptname.py  tox.ini
.github/workflows/: ci.yml  codecov.yml  codeql.yml  test.yml
FrozenPermeability/: model.py  simulation.py
FrozenPermeability/defaults/: model.json
FrozenPermeability/resources/: stator.dxf
adze_modeler/: __main__.py  agros2d_wrapper.py  agros_fields.py  boundaries.py  doe.py  dxf_handlers.py  femm_wrapper.py  geometry.py  gmsh.py  keywords.py  material.py  metadata.py  model.py  modelpaths.py  modelpiece.py  newmodel.py  objects.py  server.py  simulation.py  snapshot.py  utils.py
applications/BLDC/: back_emf.py  client.py  cogging_torque.py  doe_analysis.py  doe_points.py  mesh_selectivity.py  model.py  simulation.py
applications/CoggingTorqueOptimization/: artap_optimization.py  bhcurve.txt  gif_generation.py  problem_solver.py  rotor.dxf  stator_stripped.dxf  torque_start.csv
applications/Cooking_with_adze_modeler/: script.py
applications/MagneticClutch/: model.py  simulation.py
applications/PowerTransformer/: .dockerignore  .~lock.transformer.xlsx#  Dockerfile  analytical.py  client.py  model.py  simulation.py  start.sh  transformer.ods  transformer.xlsx
applications/SRM/: cogging_torque.py  model.py  simulation.py
applications/SensitivityAnalysis/: cogging_torque.py  doe_points.py  mesh_sensitivity.py  model.py  model_all.py  plot_torque.py  simulations.py  tolerance_analysis.py
applications/Team35/: asymmetric_model.py  model.py  simulation.py  symmetric_model.py  symmetric_optimization.py
applications/multi-objective-TEAM-Problem/: geometry_generation.py  solver_script.py
applications/server/: server.py
digital_twin_distiller/: __init__.py  __main__.py  _cli.py  boundaries.py  cli.py  document_vectorizer.py  encapsulator.py  femm_wrapper.py  geo_parser.py  geometry.py  gmsh.py  material.py  metadata.py  ml_project.py  model.py  objects.py  pu_learning.py  server.py  setup.py  simulation.py  simulationproject.py  snapshot.py  utils.py
docs/adze/: basemodel.md
docs/digital-twin-distiller/: basemodel.md  server.md
docs/digital-twins/: readme.md
docs/weak-form-of-magnetics/: intro.md
examples/CurrentBalancing/: models.py
examples/DistributedWinding/: asymmetric_model.py  symmetric_model.py  symmetric_optimization.py
examples/FEMM Wrapper/: femm_current_flow_problem.py  femm_electrostatic_problem.py  femm_heat_problem.py  femm_magnetic_problem.py
examples/Team35/: asymmetric_model.py  symmetric_model.py  symmetric_optimization.py
examples/TransformerFasttransients/: models.py  simplecalc.py
examples/agros2d/: agros2d_electrostatic.py  agros2d_heat_flow.py  agros2d_magnetic.py
examples/bldc-motor-simulation/: model.py  simulation.py
examples/femm_wrapper/: femm_current_flow_problem.py  femm_electrostatic_problem.py  femm_heat_problem.py  femm_magnetic_problem.py
examples/fenics_poisson_subdomain/: magnetostatics.py  poisson_subdomain.msh  poisson_subdomain.py
examples/gmsh-arbitrary-surface/: owl_shape_meshing.py  readme.md  simple_triangle.py
examples/induction_motor/: im_model.py  induction_machine_snapshot.py
examples/magnetic_actuator/: magnetic_actuator_snapshot.py
examples/overap_detection/: detection_test.py
examples/owl/: owl_writer.py
pygmsh_tests/: test_gmsh_meshing.py
resources/: test2.csv
tests/: test_agros2d_wrapper.py  test_bezier_approximation.py  test_boundaries.py  test_cli.py  test_concept.py  test_data_snapshot.py  test_document_vectorizer.py  test_doe.py  test_dxf_handlers.py  test_encapsulator.py  test_femm_wrapper.py  test_geometry.py  test_get_svg_color.py  test_invalid.lua  test_main.py  test_material.py  test_metadata.py  test_ml_project.py  test_model.py  test_modeldirs.py  test_modelpiece.py  test_ngelectrostatics.py  test_objects.py  test_positive_unlabeled_learning_example.py  test_pu_learning.py  test_server.py  test_simple_geo_parser.py  test_simulation.py  test_snapshot.py  test_svg_handlers.py  test_text_readers.py  test_text_writers.py  test_utils.py
tests/dxf_test/: 2horse.dxf
tests/integration_tests/: current_test.lua  electrostatic_test.lua  heatflow_test.lua  (+5 more)
(+763 files in other folders)
