tool.poetry]
name = "ADZE-modeler"
version = "0.0.1"
description = "Creates an encapsulated FEM simulation"
authors = [
    "TBD@montana.hu"
]

license = "AGPL"

[tool.poetry.dependencies]
python = "^3.8"
typer = "*"

[tool.poetry.dev-dependencies]
black = "*"
coverage = "*"
pre-commit = "*"
pytest = "*"
pytest-randomly = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py37']
include = '\.pyi?$'
extend-exclude = ' E203, E266, E501, W503, C901, E741, C812, C819, FS002, FS003'


[tool.coverage.report]
exclude_lines = [
    'if __name__ == "__main__":',
]


[tool.coverage.run]
branch = true
omit = [
    ".venv/*",
]

[tool.isort]
line_length = 120
case_sensitive = true
use_parentheses = true
include_trailing_comma = true
multi_line_output = 3
force_grid_wrap = 0
