[tool.poetry]
name = "ADZE-modeler"
version = "0.0.1"
description = "Creates an encapsulated FEM simulation"
authors = [
    "Tamas Orosz <orosz.tamas@montana.hu>",
    "Krisztian Gado <gado.krisztian@montana.hu>",
]

license = "AGPL"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
Jinja2="^3.0.1"
aiofiles="^0.7.0"
ezdxf = "^0.16.5"
fastapi = "^0.70"
gmsh = "^4.8.4"
importlib-resources="^5.4.0"
mkdocs-git-revision-date-plugin="^0.3.1"
mkdocs-material="^7.3.6"
mkdocs="^1.2.3"
mkdocstrings="^0.16.2"
networkx="^2.6.3"
numpy="^1.21.0"
pydantic="^1.8.2"
pygmsh="^7.1.13"
pyvista="^0.32.1"
scipy="^1.7.0"
svgpathtools="^1.4.2"
uvicorn="^0.15.0"
vedo="^2021"

[tool.poetry.dev-dependencies]
black = "*"
coverage = "*"
pre-commit="*"
pytest = "*"
gitlint = "*"
isort = "*"
pyupgrade = "^2.29.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
target-version = ['py39']
force-exclude = 'adze_modeler/resources/'
addopts=['--quiet']
# extend-exclude = ' E203, E266, E501, W503, C901, E741, C812, C819, FS002, FS003'

# https://coverage.readthedocs.io/en/6.1.1/config.html
[tool.coverage.run]
command_line="-m pytest"
branch = true
# omit = [] put pygmsh tests here temporarly

[tool.coverage.report]
sort = "cover"
exclude_lines = [
    'if __name__ == "__main__":',
    'def __repr__',
    'def __str',
    '@(abc\.)?abstractmethod'
]



[tool.isort]
profile = "black"
line_length = 80
case_sensitive = true
use_parentheses = false
include_trailing_comma = true
multi_line_output = 8
force_grid_wrap = 0

# [too.pre-commit.run]

# [tool.flake8]
# ignore = E203, E266, E501, W503, C901, E741, C812, C819, FS002, FS003
# max-line-length = 120
# max-complexity = 20
# select = B,C,E,F,W,T4,B9
# statistics = True

# [tool.pylint.FORMAT]
# max-line-length = 127

# [tool.pylint.MASTER]
# disable = [
#     "bad-continuation",
#     "duplicate-code",
#     "invalid-name",
#     "missing-docstring",
#     "too-few-public-methods",
# ]
